--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test' "
   },
   "engines": {
     "node": "9.6.1"
@@ -14,6 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "lodash": "^4.17.5",
     "socket.io": "^2.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
+    "nodemon": "^1.17.3"
   }
 }
