--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test' "
+    "test-watch": "nodemon --exec 'npm test' ",
+    "start-dev": "nodemon server/server.js"
   },
   "engines": {
     "node": "9.6.1"
