--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
